# basictraining

./: .gitignore  CMakeLists.txt  EigenTest.cc  LinearSolver.cc  OpenCVTest.cc  draw.py  eigenmain.cc  ffd.cc  taskmain.cc  test.cc  test1.cc
include/: ExtractAndMatch.h  TestFunction.h  ceresBA.h  extractandmatch.h  solvepose.h  triangulation.h  utility.h  utils.h
src/: ExtractAndMatch.cc  TestFunction.cc  ceresBA.cc  extractandmatch.cc  solvepose.cc  triangulation.cc  utils.cc
two_image_pose_estimation/: sensor.yaml
